# azure-iot-sdk-sys

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  conan-deps.build.sh  conanfile.txt  eis_utils.patch  wrapper.h
src/: lib.rs
