[package]
name = "azure-iot-sdk-sys"
version = "0.5.3"
edition = "2021"
authors = [
    "Joerg Zeidler <joerg.zeidler@conplement.de>",
    "Jan Zachmann <jan.zachmann@conplement.de>",
]
build = "build.rs"
repository = "https://github.com/ICS-DeviceManagement/azure-iot-sdk-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# select "default = ["edge_modules"]" for building crate with iotedge module support
default = []
edge_modules = []

[build-dependencies]
bindgen = "0.60"
pkg-config = "0.3.25"
