[package]
authors = ["omnect@conplement.de>"]
build = "build.rs"
description = "Basic sys crate to azure-iot-sdk-c lib."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "azure-iot-sdk-sys"
repository = "https://github.com/omnect/azure-iot-sdk-sys"
version = "0.6.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# select "default = ["edge_modules"]" for building crate with iotedge module support
default = []
edge_modules = []

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"
